fixed header alignment and confetti appears each time - tested that when countdown hits 0, everything still works properly

--- a/src/styles/Wrapped.scss
+++ b/src/styles/Wrapped.scss
@@ -131,7 +131,7 @@
   &.top-text{
     position: absolute;
     top: 3rem;
-    left: 0rem;
+    left: -3.5rem;
     font-size: 35px;
     font-weight: 600;
     color: #080680;
